--- a/index.html
+++ b/index.html
@@ -1,1 +1,171 @@
-<h1> hello </h1>
+<!DOCTYPE HTML>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>elisa lee - center-block</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="icon"
+          type="image/"
+          href="/assets/img/favicon.png"/>
+
+    <link href="assets/css/style.min.css" rel="stylesheet">
+    <script src="assets/components/jquery/jquery.min.js"></script>
+
+    <!-- BOOTSTRAP -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+    <script src="assets/components/modernizr/modernizr.js"></script>
+    <script src="assets/js/scripts.min.js"></script>
+
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900|Lobster+Two" rel="stylesheet">
+  </head>
+
+  <body class="background">
+    <nav class="navbar navbar-custom">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/index.html"><img src="/assets/img/emyl3_logo.svg"/></a>
+        </div>
+
+        <div class="collapse navbar-collapse" id="navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/index.html">Work</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!--gallery content-->
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-xs-12 heading">
+          <h1>My Work</h1>
+        </div>
+        <!--gallery item start-->
+        <div class="galleryitem col-lg-3 col-md-4 col-sm-6 col-xs-12">
+          <div class="hovereffect">
+            <img class="img-responsive" src="/assets/img/gallery/pollinate_logo.png" alt="pollinate logo">
+            <div class="overlay">
+               <h2 class="title">pollinate</h2>
+               <a class="info" target="_blank" href="https://github.com/emyl3/pollinate">< code ><br/>web application</a>
+            </div>
+          </div>
+        </div>
+        <!--gallery item end-->
+        <!--gallery item start-->
+        <div class="galleryitem col-lg-3 col-md-4 col-sm-6 col-xs-12">
+          <div class="hovereffect">
+            <img class="img-responsive" src="/assets/img/gallery/growlog_logo.png" alt="growlog logo">
+            <div class="overlay">
+               <h2 class="title">growlog</h2>
+               <a class="info" target="_blank" href="https://github.com/emyl3/GrowLog">< code ><br/>web application</a>
+            </div>
+          </div>
+        </div>
+        <!--gallery item end-->
+        <!--gallery item start-->
+        <div class="galleryitem col-lg-3 col-md-4 col-sm-6 col-xs-12">
+          <div class="hovereffect">
+            <img class="img-responsive" src="/assets/img/gallery/calculator_logo.png" alt="Calculator Logo">
+            <div class="overlay">
+               <h2 class="title">Calculator</h2>
+               <a class="info" target="_blank" href="https://github.com/emyl3/Calculator">< code ><br/>web application</a>
+            </div>
+          </div>
+        </div>
+        <!--gallery item end-->
+        <!--gallery item start-->
+        <div class="galleryitem col-lg-3 col-md-4 col-sm-6 col-xs-12">
+          <div class="hovereffect">
+            <img class="img-responsive" src="/assets/img/gallery/todolist_logo.png" alt="To Do List Logo">
+            <div class="overlay">
+               <h2 class="title">TO DO LIST</h2>
+               <a class="info" target="_blank" href="https://github.com/emyl3/To-Do-List">< code ><br/>web application</a>
+            </div>
+          </div>
+        </div>
+        <!--gallery item end-->
+        <!--gallery item start-->
+        <div class="galleryitem col-lg-3 col-md-4 col-sm-6 col-xs-12">
+          <div class="hovereffect">
+            <img class="img-responsive" src="/assets/img/gallery/rlmcalendar_logo.png" alt="Ricardo Levins Morales Calendar">
+            <div class="overlay">
+               <h2 class="title">RLM Calendar</h2>
+               <a class="info" target="_blank" href="http://rlmartstudio.com/product/2017-ricardo-levins-morales-liberation-calendar/?v=7516fd43adaa">< design ><br/>print</a>
+            </div>
+          </div>
+        </div>
+        <!--gallery item end-->
+        <!--gallery item start-->
+        <div class="galleryitem col-lg-3 col-md-4 col-sm-6 col-xs-12">
+          <div class="hovereffect">
+            <img class="img-responsive" src="/assets/img/gallery/bethechange_logo.png" alt="Be The Change Logo">
+            <div class="overlay">
+               <h2 class="title">Be the Change</h2>
+               <a class="info" target="_blank" href="https://drive.google.com/drive/folders/0B4NHODZUTVoxWkVUa2t1VmVhMVk">< design ><br/>print</a>
+            </div>
+          </div>
+        </div>
+        <!--gallery item end-->
+        <!--gallery item start-->
+        <div class="galleryitem col-lg-3 col-md-4 col-sm-6 col-xs-12">
+          <div class="hovereffect">
+            <img class="img-responsive" src="/assets/img/gallery/yearendappeal_logo.png" alt="Year End Appeal Logo">
+            <div class="overlay">
+               <h2 class="title">Year End Appeal</h2>
+               <a class="info" target="_blank" href="https://drive.google.com/drive/folders/0B4NHODZUTVoxWkVUa2t1VmVhMVk">< design ><br/>web & print</a>
+            </div>
+          </div>
+        </div>
+        <!--gallery item end-->
+        <!--gallery item start-->
+        <div class="galleryitem col-lg-3 col-md-4 col-sm-6 col-xs-12">
+          <div class="hovereffect">
+            <img class="img-responsive" src="/assets/img/gallery/yourproject_logo.png" alt="Your Project Logo">
+            <div class="overlay">
+               <h2 class="title">YOUR PROJECT</h2>
+               <a class="info" href="mailto:elisa.my.lee@gmail.com">contact me</a>
+            </div>
+          </div>
+        </div>
+        <!--gallery item end-->
+      </div>
+    </div>
+    <!--end of gallery content-->
+
+    <footer>
+      <div id="footer-nav" class="container">
+        <div class="row footer icons">
+          <div class="col-xs-2 col-md-5"></div>
+          <div class="col-xs-4 col-md-1" id="github">
+            <a href="https://github.com/emyl3" target="_blank">
+              <img alt="github logo" class="center-block img-responsive footericon" src="/assets/img/github_icon_white.png"/>
+            </a>
+          </div>
+          <div class="col-xs-4 col-md-1" id="linkedin">
+            <a href="https://www.linkedin.com/in/emyl3/" target="_blank">
+              <img alt="linkedin logo" class="center-block img-responsive footericon" src="/assets/img/linkedin_icon_white.png"/>
+            </a>
+          </div>
+          <div class="col-xs-2 col-md-5"></div>
+        </div>
+        <div class="row footer">
+          <div class="col-xs-12 copyright">
+            <p>&copy <span class="copyrightyear"></span> emyl3 // elisa lee</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+  </body>
+</html>
