--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/index.html"><img src="/assets/img/emyl3_logo.svg"/></a>
+          <a class="navbar-brand" href="/"><img src="/assets/img/emyl3_logo.svg"/></a>
         </div>
 
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/index.html">Work</a></li>
+            <li><a href="/pages/about">About</a></li>
+            <li><a href="/">Work</a></li>
           </ul>
         </div>
       </div>
