--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
     <link rel="icon"
           type="image/"
-          href="/assets/img/favicon.png"/>
+          href="https://github.com/emyl3/portfolio/blob/master/assets/img/favicon.png"/>
 
-    <link href="assets/css/style.min.css" rel="stylesheet">
+    <link href="https://github.com/emyl3/portfolio/blob/gh-pages/assets/css/style.min.css" rel="stylesheet">
     <script src="assets/components/jquery/jquery.min.js"></script>
 
     <!-- BOOTSTRAP -->
