--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
     <link rel="icon"
           type="image/"
-          href="https://github.com/emyl3/portfolio/blob/master/assets/img/favicon.png"/>
+          href="/assets/img/favicon.png"/>
 
-    <link href="https://github.com/emyl3/portfolio/blob/gh-pages/assets/css/style.min.css" rel="stylesheet">
+    <link href="assets/css/style.min.css" rel="stylesheet">
     <script src="assets/components/jquery/jquery.min.js"></script>
 
     <!-- BOOTSTRAP -->
@@ -33,7 +33,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"><img src="/blob/gh-pages/assets/img/emyl3_logo.svg"/></a>
+          <a class="navbar-brand" href="/"><img src="/blob/gh-pages/assets/img/emyl3logo.svg"/></a>
         </div>
 
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
