--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="assets/js/scripts.min.js"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900|Lobster+Two" rel="stylesheet">
+  <base href="https://emyl3.github.io/portfolio/"/>
   </head>
 
   <body class="background">
