--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <script src="assets/js/scripts.min.js"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900|Lobster+Two" rel="stylesheet">
-  <base href="https://emyl3.github.io/portfolio/"/>
   </head>
 
   <body class="background">
@@ -34,7 +33,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"><img src="/assets/img/emyl3logo.svg"/></a>
+          <a class="navbar-brand" href="/"><img src="https://emyl3.github.io/portfolio/assets/img/emyl3logo.svg"/></a>
         </div>
 
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
