--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="icon"
           type="image/"
-          href="/assets/img/favicon.png"/>
+          href="https://emyl3.github.io/portfolio/assets/img/favicon.png"/>
 
     <link href="assets/css/style.min.css" rel="stylesheet">
     <script src="assets/components/jquery/jquery.min.js"></script>
@@ -38,7 +38,7 @@
 
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/pages/about">About</a></li>
+            <li><a href="/portfolio/about.html">About</a></li>
             <li><a href="/">Work</a></li>
           </ul>
         </div>
