--- a/about.html
+++ b/about.html
@@ -7,18 +7,18 @@
 
     <link rel="icon"
           type="image/"
-          href="/assets/img/favicon.png"/>
+          href="https://emyl3.github.io/portfolio/assets/img/favicon.png"/>
 
-    <link href="assets/css/style.min.css" rel="stylesheet">
-    <script src="assets/components/jquery/jquery.min.js"></script>
+    <link href="https://emyl3.github.io/portfolioassets/css/style.min.css" rel="stylesheet">
+    <script src="https://emyl3.github.io/portfolioassets/components/jquery/jquery.min.js"></script>
 
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-    <script src="assets/components/modernizr/modernizr.js"></script>
-    <script src="assets/js/scripts.min.js"></script>
+    <script src="https://emyl3.github.io/portfolioassets/components/modernizr/modernizr.js"></script>
+    <script src="https://emyl3.github.io/portfolioassets/js/scripts.min.js"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900|Lobster+Two" rel="stylesheet">
   </head>
@@ -33,13 +33,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"><img src="/assets/img/emyl3_logo.svg"/></a>
+          <a class="navbar-brand" href="https://emyl3.github.io/portfolio"><img src="https://emyl3.github.io/portfolio/assets/img/emyl3_logo.svg"/></a>
         </div>
 
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/index.html">Work</a></li>
+            <li><a href="https://emyl3.github.io/portfolio/about.html">About</a></li>
+            <li><a href="https://emyl3.github.io/portfolio/">Work</a></li>
           </ul>
         </div>
       </div>
@@ -55,7 +55,7 @@
         <!--start of about box content-->
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 aboutitem">
           <div class="hovereffect2">
-            <img class="img-responsive" src="/assets/img/about/about1.png" alt="Sunset">
+            <img class="img-responsive" src="https://emyl3.github.io/portfolio/assets/img/about/about1.png" alt="Sunset">
             <div class="overlay2">
               <h2>hi, i'm elisa</h2>
 			      	<p> my <a target="_blank" href="https://lgbt.wisc.edu/documents/LGBTCC-Gender_pronoun_guide.pdf">pronouns</a> are
@@ -68,7 +68,7 @@
         <!--start of about box content-->
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 aboutitem">
           <div class="hovereffect2">
-            <img class="img-responsive" src="/assets/img/about/about2.png" alt="Sunset">
+            <img class="img-responsive" src="https://emyl3.github.io/portfolio/assets/img/about/about2.png" alt="Sunset">
             <div class="overlay2">
               <h2>recently,</h2>
               <p>i learned to <a target="_blank" href="https://primeacademy.io/">code</a>
@@ -81,7 +81,7 @@
         <!--start of about box content-->
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 aboutitem">
           <div class="hovereffect2">
-            <img class="img-responsive" src="/assets/img/about/about3.png" alt="Sunset">
+            <img class="img-responsive" src="https://emyl3.github.io/portfolio/assets/img/about/about3.png" alt="Sunset">
             <div class="overlay2">
               <h2>also,</h2>
               <p>i like to be creative and
@@ -94,7 +94,7 @@
         <!--start of about box content-->
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 aboutitem">
           <div class="hovereffect2">
-            <img class="img-responsive" src="/assets/img/about/about4.png" alt="Sunset">
+            <img class="img-responsive" src="https://emyl3.github.io/portfolio/assets/img/about/about4.png" alt="Sunset">
             <div class="overlay2">
               <h2>want to get in touch?</h2>
               <p><a target="_blank" href="mailto:elisa.my.lee@gmail.com">contact me</a>
