--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="icon"
           type="image/"
-          href="https://emyl3.github.io/portfolio/assets/img/favicon.png"/>
+          href="assets/img/favicon.png"/>
 
     <link href="assets/css/style.min.css" rel="stylesheet">
     <script src="assets/components/jquery/jquery.min.js"></script>
@@ -17,8 +17,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-    <script src="assets/components/modernizr/modernizr.js"></script>
-    <script src="assets/js/scripts.min.js"></script>
+    <script src="https://emyl3.github.io/portfolio/assets/components/modernizr/modernizr.js"></script>
+    <script src="https://emyl3.github.io/portfolio/assets/js/scripts.min.js"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900|Lobster+Two" rel="stylesheet">
   </head>
