--- a/about.html
+++ b/about.html
@@ -7,18 +7,18 @@
 
     <link rel="icon"
           type="image/"
-          href="https://emyl3.github.io/portfolio/assets/img/favicon.png"/>
+          href="assets/img/favicon.png"/>
 
-    <link href="https://emyl3.github.io/portfolioassets/css/style.min.css" rel="stylesheet">
-    <script src="https://emyl3.github.io/portfolioassets/components/jquery/jquery.min.js"></script>
+    <link href="assets/css/style.min.css" rel="stylesheet">
+    <script src="assets/components/jquery/jquery.min.js"></script>
 
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-    <script src="https://emyl3.github.io/portfolioassets/components/modernizr/modernizr.js"></script>
-    <script src="https://emyl3.github.io/portfolioassets/js/scripts.min.js"></script>
+    <script src="assets/components/modernizr/modernizr.js"></script>
+    <script src="assets/js/scripts.min.js"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900|Lobster+Two" rel="stylesheet">
   </head>
@@ -33,7 +33,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="https://emyl3.github.io/portfolio"><img src="https://emyl3.github.io/portfolio/assets/img/emyl3_logo.svg"/></a>
+          <a class="navbar-brand" href="/portfolio"><img src="assets/img/emyl3_logo.svg"/></a>
         </div>
 
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
