--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-    <script src="https://emyl3.github.io/portfolio/assets/components/modernizr/modernizr.js"></script>
-    <script src="https://emyl3.github.io/portfolio/assets/js/scripts.min.js"></script>
+    <script src="assets/components/modernizr/modernizr.js"></script>
+    <script src="assets/js/scripts.min.js"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900|Lobster+Two" rel="stylesheet">
   </head>
@@ -38,8 +38,8 @@
 
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/portfolio/about.html">About</a></li>
-            <li><a href="/">Work</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="/portfolio">Work</a></li>
           </ul>
         </div>
       </div>
@@ -54,7 +54,7 @@
         <!--gallery item start-->
         <div class="galleryitem col-lg-3 col-md-4 col-sm-6 col-xs-12">
           <div class="hovereffect">
-            <img class="img-responsive" src="/assets/img/gallery/pollinate_logo.png" alt="pollinate logo">
+            <img class="img-responsive" src="assets/img/gallery/pollinate_logo.png" alt="pollinate logo">
             <div class="overlay">
                <h2 class="title">pollinate</h2>
                <a class="info" target="_blank" href="https://github.com/emyl3/pollinate">< code ><br/>web application</a>
@@ -65,7 +65,7 @@
         <!--gallery item start-->
         <div class="galleryitem col-lg-3 col-md-4 col-sm-6 col-xs-12">
           <div class="hovereffect">
-            <img class="img-responsive" src="/assets/img/gallery/growlog_logo.png" alt="growlog logo">
+            <img class="img-responsive" src="assets/img/gallery/growlog_logo.png" alt="growlog logo">
             <div class="overlay">
                <h2 class="title">growlog</h2>
                <a class="info" target="_blank" href="https://github.com/emyl3/GrowLog">< code ><br/>web application</a>
