--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"><img src="assets/img/emyl3logo.svg"/></a>
+          <a class="navbar-brand" href="/portfolio"><img src="assets/img/emyl3logo.svg"/></a>
         </div>
 
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="about.html">About</a></li>
+            <li><a href="/portfolio/about.html">About</a></li>
             <li><a href="/portfolio">Work</a></li>
           </ul>
         </div>
@@ -76,7 +76,7 @@
         <!--gallery item start-->
         <div class="galleryitem col-lg-3 col-md-4 col-sm-6 col-xs-12">
           <div class="hovereffect">
-            <img class="img-responsive" src="/assets/img/gallery/calculator_logo.png" alt="Calculator Logo">
+            <img class="img-responsive" src="assets/img/gallery/calculator_logo.png" alt="Calculator Logo">
             <div class="overlay">
                <h2 class="title">Calculator</h2>
                <a class="info" target="_blank" href="https://github.com/emyl3/Calculator">< code ><br/>web application</a>
@@ -87,7 +87,7 @@
         <!--gallery item start-->
         <div class="galleryitem col-lg-3 col-md-4 col-sm-6 col-xs-12">
           <div class="hovereffect">
-            <img class="img-responsive" src="/assets/img/gallery/todolist_logo.png" alt="To Do List Logo">
+            <img class="img-responsive" src="assets/img/gallery/todolist_logo.png" alt="To Do List Logo">
             <div class="overlay">
                <h2 class="title">TO DO LIST</h2>
                <a class="info" target="_blank" href="https://github.com/emyl3/To-Do-List">< code ><br/>web application</a>
@@ -98,7 +98,7 @@
         <!--gallery item start-->
         <div class="galleryitem col-lg-3 col-md-4 col-sm-6 col-xs-12">
           <div class="hovereffect">
-            <img class="img-responsive" src="/assets/img/gallery/rlmcalendar_logo.png" alt="Ricardo Levins Morales Calendar">
+            <img class="img-responsive" src="assets/img/gallery/rlmcalendar_logo.png" alt="Ricardo Levins Morales Calendar">
             <div class="overlay">
                <h2 class="title">RLM Calendar</h2>
                <a class="info" target="_blank" href="http://rlmartstudio.com/product/2017-ricardo-levins-morales-liberation-calendar/?v=7516fd43adaa">< design ><br/>print</a>
@@ -109,7 +109,7 @@
         <!--gallery item start-->
         <div class="galleryitem col-lg-3 col-md-4 col-sm-6 col-xs-12">
           <div class="hovereffect">
-            <img class="img-responsive" src="/assets/img/gallery/bethechange_logo.png" alt="Be The Change Logo">
+            <img class="img-responsive" src="assets/img/gallery/bethechange_logo.png" alt="Be The Change Logo">
             <div class="overlay">
                <h2 class="title">Be the Change</h2>
                <a class="info" target="_blank" href="https://drive.google.com/drive/folders/0B4NHODZUTVoxWkVUa2t1VmVhMVk">< design ><br/>print</a>
@@ -120,7 +120,7 @@
         <!--gallery item start-->
         <div class="galleryitem col-lg-3 col-md-4 col-sm-6 col-xs-12">
           <div class="hovereffect">
-            <img class="img-responsive" src="/assets/img/gallery/yearendappeal_logo.png" alt="Year End Appeal Logo">
+            <img class="img-responsive" src="assets/img/gallery/yearendappeal_logo.png" alt="Year End Appeal Logo">
             <div class="overlay">
                <h2 class="title">Year End Appeal</h2>
                <a class="info" target="_blank" href="https://drive.google.com/drive/folders/0B4NHODZUTVoxWkVUa2t1VmVhMVk">< design ><br/>web & print</a>
@@ -131,7 +131,7 @@
         <!--gallery item start-->
         <div class="galleryitem col-lg-3 col-md-4 col-sm-6 col-xs-12">
           <div class="hovereffect">
-            <img class="img-responsive" src="/assets/img/gallery/yourproject_logo.png" alt="Your Project Logo">
+            <img class="img-responsive" src="assets/img/gallery/yourproject_logo.png" alt="Your Project Logo">
             <div class="overlay">
                <h2 class="title">YOUR PROJECT</h2>
                <a class="info" href="mailto:elisa.my.lee@gmail.com">contact me</a>
@@ -149,12 +149,12 @@
           <div class="col-xs-2 col-md-5"></div>
           <div class="col-xs-4 col-md-1" id="github">
             <a href="https://github.com/emyl3" target="_blank">
-              <img alt="github logo" class="center-block img-responsive footericon" src="/assets/img/github_icon_white.png"/>
+              <img alt="github logo" class="center-block img-responsive footericon" src="assets/img/github_icon_white.png"/>
             </a>
           </div>
           <div class="col-xs-4 col-md-1" id="linkedin">
             <a href="https://www.linkedin.com/in/emyl3/" target="_blank">
-              <img alt="linkedin logo" class="center-block img-responsive footericon" src="/assets/img/linkedin_icon_white.png"/>
+              <img alt="linkedin logo" class="center-block img-responsive footericon" src="assets/img/linkedin_icon_white.png"/>
             </a>
           </div>
           <div class="col-xs-2 col-md-5"></div>
