--- a/about.html
+++ b/about.html
@@ -38,8 +38,8 @@
 
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="https://emyl3.github.io/portfolio/about.html">About</a></li>
-            <li><a href="https://emyl3.github.io/portfolio/">Work</a></li>
+            <li><a href="/portfolio/about.html">About</a></li>
+            <li><a href="/portfolio/">Work</a></li>
           </ul>
         </div>
       </div>
@@ -55,7 +55,7 @@
         <!--start of about box content-->
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 aboutitem">
           <div class="hovereffect2">
-            <img class="img-responsive" src="https://emyl3.github.io/portfolio/assets/img/about/about1.png" alt="Sunset">
+            <img class="img-responsive" src="assets/img/about/about1.png" alt="Sunset">
             <div class="overlay2">
               <h2>hi, i'm elisa</h2>
 			      	<p> my <a target="_blank" href="https://lgbt.wisc.edu/documents/LGBTCC-Gender_pronoun_guide.pdf">pronouns</a> are
@@ -68,7 +68,7 @@
         <!--start of about box content-->
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 aboutitem">
           <div class="hovereffect2">
-            <img class="img-responsive" src="https://emyl3.github.io/portfolio/assets/img/about/about2.png" alt="Sunset">
+            <img class="img-responsive" src="assets/img/about/about2.png" alt="Sunset">
             <div class="overlay2">
               <h2>recently,</h2>
               <p>i learned to <a target="_blank" href="https://primeacademy.io/">code</a>
@@ -81,7 +81,7 @@
         <!--start of about box content-->
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 aboutitem">
           <div class="hovereffect2">
-            <img class="img-responsive" src="https://emyl3.github.io/portfolio/assets/img/about/about3.png" alt="Sunset">
+            <img class="img-responsive" src="assets/img/about/about3.png" alt="Sunset">
             <div class="overlay2">
               <h2>also,</h2>
               <p>i like to be creative and
@@ -94,7 +94,7 @@
         <!--start of about box content-->
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 aboutitem">
           <div class="hovereffect2">
-            <img class="img-responsive" src="https://emyl3.github.io/portfolio/assets/img/about/about4.png" alt="Sunset">
+            <img class="img-responsive" src="assets/img/about/about4.png" alt="Sunset">
             <div class="overlay2">
               <h2>want to get in touch?</h2>
               <p><a target="_blank" href="mailto:elisa.my.lee@gmail.com">contact me</a>
@@ -112,12 +112,12 @@
           <div class="col-xs-2 col-md-5"></div>
           <div class="col-xs-4 col-md-1" id="github">
             <a href="https://github.com/emyl3" target="_blank">
-              <img alt="github logo" class="center-block img-responsive footericon" src="/assets/img/github_icon_white.png"/>
+              <img alt="github logo" class="center-block img-responsive footericon" src="assets/img/github_icon_white.png"/>
             </a>
           </div>
           <div class="col-xs-4 col-md-1" id="linkedin">
             <a href="https://www.linkedin.com/in/emyl3/" target="_blank">
-              <img alt="linkedin logo" class="center-block img-responsive footericon" src="/assets/img/linkedin_icon_white.png"/>
+              <img alt="linkedin logo" class="center-block img-responsive footericon" src="assets/img/linkedin_icon_white.png"/>
             </a>
           </div>
           <div class="col-xs-2 col-md-5"></div>
