--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
     <script src="assets/components/modernizr/modernizr.js"></script>
-    <script src="assets/js/scripts.min.js"></script>
+    <script src="assets/js/scripts.js"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900|Lobster+Two" rel="stylesheet">
   </head>
