--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/portfolio/about.html">About</a></li>
-            <li><a href="/portfolio">Work</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="index.html">Work</a></li>
           </ul>
         </div>
       </div>
