--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/portfolio"><img src="assets/img/emyl3logo.svg"/></a>
+          <a class="navbar-brand" href="index.html"><img src="assets/img/emyl3logo.svg"/></a>
         </div>
 
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
