--- a/about.html
+++ b/about.html
@@ -33,13 +33,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/portfolio"><img src="assets/img/emyl3logo.svg"/></a>
+          <a class="navbar-brand" href="index.html"><img src="assets/img/emyl3logo.svg"/></a>
         </div>
 
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/portfolio/about.html">About</a></li>
-            <li><a href="/portfolio/">Work</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="index.html">Work</a></li>
           </ul>
         </div>
       </div>
