--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>elisa lee - center-block</title>
+    <title>emyl3 - elisa lee</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="icon"
