--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
           type="image/"
           href="assets/img/favicon.png"/>
 
-    <link href="assets/css/style.min.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
     <script src="assets/components/jquery/jquery.min.js"></script>
 
     <!-- BOOTSTRAP -->
@@ -45,7 +45,7 @@
       </div>
     </nav>
 
-    <div class="container-fluid">
+    <div class="container-fluid aboutgallery">
       <div class="row">
         <div class="col-xs-12 heading">
           <h1 id="about">About</h1>
