--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
           type="image/"
           href="assets/img/favicon.png"/>
 
-    <link href="assets/css/style.min.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
     <script src="assets/components/jquery/jquery.min.js"></script>
 
     <!-- BOOTSTRAP -->
@@ -52,7 +52,7 @@
           <h1>My Work</h1>
         </div>
         <!--gallery item start-->
-        <div class="galleryitem col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="galleryitem col-lg-4 col-md-4 col-sm-6 col-xs-12">
           <div class="hovereffect">
             <img class="img-responsive" src="assets/img/gallery/pollinate_logo.png" alt="pollinate logo">
             <div class="overlay">
@@ -63,7 +63,7 @@
         </div>
         <!--gallery item end-->
         <!--gallery item start-->
-        <div class="galleryitem col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="galleryitem col-lg-4 col-md-4 col-sm-6 col-xs-12">
           <div class="hovereffect">
             <img class="img-responsive" src="assets/img/gallery/growlog_logo.png" alt="growlog logo">
             <div class="overlay">
@@ -74,7 +74,7 @@
         </div>
         <!--gallery item end-->
         <!--gallery item start-->
-        <div class="galleryitem col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="galleryitem col-lg-4 col-md-4 col-sm-6 col-xs-12">
           <div class="hovereffect">
             <img class="img-responsive" src="assets/img/gallery/calculator_logo.png" alt="Calculator Logo">
             <div class="overlay">
@@ -85,7 +85,7 @@
         </div>
         <!--gallery item end-->
         <!--gallery item start-->
-        <div class="galleryitem col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="galleryitem col-lg-4 col-md-4 col-sm-6 col-xs-12">
           <div class="hovereffect">
             <img class="img-responsive" src="assets/img/gallery/todolist_logo.png" alt="To Do List Logo">
             <div class="overlay">
@@ -96,7 +96,7 @@
         </div>
         <!--gallery item end-->
         <!--gallery item start-->
-        <div class="galleryitem col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="galleryitem col-lg-4 col-md-4 col-sm-6 col-xs-12">
           <div class="hovereffect">
             <img class="img-responsive" src="assets/img/gallery/rlmcalendar_logo.png" alt="Ricardo Levins Morales Calendar">
             <div class="overlay">
@@ -107,7 +107,7 @@
         </div>
         <!--gallery item end-->
         <!--gallery item start-->
-        <div class="galleryitem col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="galleryitem col-lg-4 col-md-4 col-sm-6 col-xs-12">
           <div class="hovereffect">
             <img class="img-responsive" src="assets/img/gallery/bethechange_logo.png" alt="Be The Change Logo">
             <div class="overlay">
@@ -118,7 +118,7 @@
         </div>
         <!--gallery item end-->
         <!--gallery item start-->
-        <div class="galleryitem col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="galleryitem col-lg-4 col-md-4 col-sm-6 col-xs-12">
           <div class="hovereffect">
             <img class="img-responsive" src="assets/img/gallery/yearendappeal_logo.png" alt="Year End Appeal Logo">
             <div class="overlay">
@@ -128,20 +128,28 @@
           </div>
         </div>
         <!--gallery item end-->
+      </div>
+    </div>
+    <!--end of gallery content-->
+
+    <div class="container special">
+      <div class="row">
+        <div class="col-xs-12 heading">
+          <h1 id="project">Your Project</h1>
+        </div>
         <!--gallery item start-->
-        <div class="galleryitem col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div class="galleryitem col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-12">
           <div class="hovereffect">
             <img class="img-responsive" src="assets/img/gallery/yourproject_logo.png" alt="Your Project Logo">
             <div class="overlay">
-               <h2 class="title">YOUR PROJECT</h2>
-               <a class="info" href="mailto:elisa.my.lee@gmail.com">contact me</a>
+               <h2 class="title">HAVE AN IDEA?</h2>
+               <a class="info" href="mailto:elisa.my.lee@gmail.com">Let's get started! Contact me</a>
             </div>
           </div>
         </div>
         <!--gallery item end-->
       </div>
     </div>
-    <!--end of gallery content-->
 
     <footer>
       <div id="footer-nav" class="container">
